have intro succesfully put in, editing content.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
-<div id = "container">
+<div id = "container" class = "blurred">
 
 <div id = "header">
 	<p id = "title" >Visualizing the impact of Polio:</p> 
@@ -27,6 +27,41 @@
 </div>
 
 </div> <!-- end of container div. -->
+
+<div id = "intro"> 
+  <h1>The Impact of Polio on The United States</h1>
+  
+  <h3>Why?</h3>
+  <p>
+    Let me know what you think on twitter: <strong><a href = "https://twitter.com/NicholasStrayer">@NicholasStrayer</a></strong> or email: <strong>nick [dot] strayer [at] gmail</strong> 
+  </p>
+
+  <hr>
+
+  <h4>How to use</h4>
+  <ul>
+    <li>Click where indicated to watch the time progress.</li>
+    <li>Drag the time slider to manually control the year.</li>
+  </ul>
+
+  <!-- <h3>Resources:</h3> -->
+  <h4>Data:</h4>
+  <ul>
+    <li>Population data: <a href = "http://www.census.gov/">U.S. Census Bureau.</a></li>
+    <li>Polio data: <a href = "https://www.tycho.pitt.edu/">Project Tycho.</a></li>
+  </ul>
+  <h4>Tools:</h4>
+  <ul>
+    <li><a href = "http://d3js.org/"> d3.js </a></li>
+    <li><a href = "http://jquery.com/"> JQuery </a></li>
+    <li><a href = "https://github.com/nstrayer/histOfPolio">Viz repo</a>
+    <li><a href = "https://github.com/nstrayer/math295">Data cleaning repo</a>
+  </ul>
+  
+  <p id = "continueText"><strong>Click here to continue on to the visualization!</strong>
+  </p>
+</div>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
