Updated on site, css ironed out.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 <div id = "header">
 	<p id = "title" >Visualizing the impact of Polio:</p> 
-	<p id = "instructions">Click <strong id = "startButton">here</strong> to watch polio hit the United States or use the slider to manually drag year. Axis is percent of population with Polio. 
+	<p id = "instructions">Click <strong id = "startButton">here</strong> to watch polio hit the United States or use the slider to manually drag year. 
+  </p>
+<p>
+  Axis is percent of population with Polio. 
 	</p>
 	<div id = "slider">
 	</div>
@@ -30,21 +33,18 @@
 
 <div id = "intro"> 
   <h1>The Impact of Polio on The United States</h1>
-  
-  <h3>Why?</h3>
   <p>
-    Let me know what you think on twitter: <strong><a href = "https://twitter.com/NicholasStrayer">@NicholasStrayer</a></strong> or email: <strong>nick [dot] strayer [at] gmail</strong> 
+    This is a result of a homework project for a class I am taking at the Unversity of Vermont. We were given population datasets and polio infection data. I wanted to explore temporal trends. 
+  </p>
+  <p id = "picture">
+    <img src = "polioGraph.png" alt = "Cummulative Polio Trends" height = "300" width = "450">
+  </p>
+
+  <p id = "continueText"><strong>Click here to continue on to the visualization!</strong>
   </p>
 
   <hr>
 
-  <h4>How to use</h4>
-  <ul>
-    <li>Click where indicated to watch the time progress.</li>
-    <li>Drag the time slider to manually control the year.</li>
-  </ul>
-
-  <!-- <h3>Resources:</h3> -->
   <h4>Data:</h4>
   <ul>
     <li>Population data: <a href = "http://www.census.gov/">U.S. Census Bureau.</a></li>
@@ -52,14 +52,13 @@
   </ul>
   <h4>Tools:</h4>
   <ul>
-    <li><a href = "http://d3js.org/"> d3.js </a></li>
-    <li><a href = "http://jquery.com/"> JQuery </a></li>
-    <li><a href = "https://github.com/nstrayer/histOfPolio">Viz repo</a>
-    <li><a href = "https://github.com/nstrayer/math295">Data cleaning repo</a>
+    <li><a href = "http://d3js.org/">d3.js, </a> 
+        <a href = "http://jquery.com/">JQuery, </a>
+        <a href = "https://github.com/nstrayer/histOfPolio">Viz repo, </a>
+        <a href = "https://github.com/nstrayer/math295">Data cleaning repo </a>
+    </li>
   </ul>
   
-  <p id = "continueText"><strong>Click here to continue on to the visualization!</strong>
-  </p>
 </div>
 
 <script>
